--- a/src/components/FormNav/FormNav.module.css
+++ b/src/components/FormNav/FormNav.module.css
@@ -8,3 +8,36 @@
     background-position: center;
     padding: 2rem;
 }
+
+@media screen and (max-width: 850px) {
+    .formNav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+
+        height: 20vh;
+        margin: 0;
+        border-radius: 0;
+        z-index: -1;
+        background-image: url('../../assets/images/bg-sidebar-mobile.svg');
+        background-repeat: no-repeat;
+        /* background-size: cover;*/
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .formNav ul {
+        display: flex;
+        justify-content: space-around;
+        margin: 0;
+        margin-top: 2rem;
+        width: 60%;
+    }
+
+    .formNav ul li {
+        margin: 0;
+    }
+}
