--- a/src/components/FormNav/FormNavItem.module.css
+++ b/src/components/FormNav/FormNavItem.module.css
@@ -33,3 +33,18 @@
     letter-spacing: 0.1rem;
     margin-top: 0.2rem;
 }
+
+@media screen and (max-width: 850px) {
+    .formNavItem {
+        margin: 0;
+    }
+
+    .textContent {
+        display: none;
+    }
+
+    .circle {
+        padding: 0.6rem 0.85rem;
+        margin: 0;
+    }
+}
